--- a/Boat Project/boAt.css
+++ b/Boat Project/boAt.css
@@ -1,24 +1,39 @@
-*{
-padding :0%;
-margin:0%;
+* {
+  padding: 0%;
+  margin: 0%;
 }
 
-.boAt{
-    width:100%;
-    border:2px solid orange;
+.boAt {
+  width: 100%;
+  border: 2px solid orange;
 }
 
-.header{
-    width:100%;
-    border:2px solid blue ;
+.header {
+  width: 100%;
+  border: 2px solid blue;
 }
-.p_header{
-    width:100%;
-    height:40px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items:center;
-    text-align: center;
-    background-color:rgb(239,244,247);
+
+.p_header {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgb(239, 244, 247);
 }
+
+.nav-ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  display : flex ;
+  justify-content:center;
+  align-content: center;
+}
+.nav-ul .nav-ul > li {
+  float: left;
+}
+/*# sourceMappingURL=boAt.css.map */
